<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.bfh.ti.main.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/leds_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leds_string"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="499dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/buttons_id"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttons_string"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="501dp"
                tools:layout_editor_absoluteY="8dp" />

            <TextView
                android:id="@+id/lux_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/luminance_string"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="488dp"
                tools:layout_editor_absoluteY="8dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/led1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/radiobutton_led1_string" />

            <Switch
                android:id="@+id/t1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t1_text"
                android:textAlignment="viewEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/led2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_led2_string" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2_text"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/led3_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_led3_string" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3_text"
                android:textAlignment="viewEnd" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/led4_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_led4_string" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t4_text"
                android:textAlignment="viewEnd" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>